完成 DFA 构造，重构
1.完成 DFA 构造
==>使用子集构造法将 NFA 转换为 DFA
==>使用 Hopcroft 最小化 DFA
    ==>合并多个 edges 等价的状态
    ==>拓扑排序找到 DFA 头结点
==>实现 2 个单元测试

2.重构
==>NFA 和 DFA 的构造逻辑抽取到单独的 Builder
==>完善单元测试